fixing image stretching

--- a/src/style.css
+++ b/src/style.css
@@ -205,7 +205,7 @@ h3 {
 .image-3,
 .image-4 {
   border-radius: 14px;
-  width: 70%;
+  width: 80%;
 }
 .section-2 {
   max-width: 960px;
